crystal-facet-uml (1.61.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Database iterators introduced also for diagrams and diagramelements
    (should not have an experiencable effect)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 01 Dec 2024 08:30:00 +0100

crystal-facet-uml (1.61.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Database iterator allows the model export to handle unexpected many life-
    lines and messages

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 24 Nov 2024 18:30:00 +0100

crystal-facet-uml (1.61.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Compatibility to version 1.25.0 and earlier dropped to increase test
    coverage.
  * Icons of diagram types are less similar to each other.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 27 Oct 2024 08:00:00 +0100

crystal-facet-uml (1.60.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * When pasting a new diagram, navigation view is activated to see the changes
  * When undoing or redoing changes on diagrams,diagramelements or classifiers,
    changes are shown in a suitable view; also maybe features and relationships
  * While moving features, no classifier ordering lines are shown.

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 10 Aug 2024 08:00:00 +0200

crystal-facet-uml (1.59.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * some compiler warnings checked and switched off
  * while moving classifiers, grid lines better show the alignment towards
    other classifiers

 -- Andreas Warnke <cfu@andreaswarnke.de>  Thu, 11 Jul 2024 21:00:00 +0200

crystal-facet-uml (1.58.3) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * no gtk_file_chooser_set_action in gui_file_use_db_dialog (Closes: #4)

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 02 Jun 2024 08:00:00 +0200

crystal-facet-uml (1.58.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * in create mode, a click on a feature does not create another feature