@@ -1,8 +1,9 @@
 crystal-facet-uml (1.61.2) UNRELEASED; urgency=medium
 
   [ Andreas Warnke ]
-  * Database iterators introduced also for diagrams and diagramelements
-    (should not have an experiencable effect)
+  * Database iterators introduced also for diagrams and diagramelements;
+    diagrams can show the defined number of features and relationships
+    independant of number of other diagrams
 
  -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 01 Dec 2024 08:30:00 +0100
 
